docs/sphinx/_downloads/f8bc3b359649e1511b70552f7d3ecf4f/codata.h

typedef struct codata_constant_type{
    char name[65];
    double value;
    double uncertainty;
    char unit[33];
}cct;
ADD_IMPORT extern const cct CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT_2018;
ADD_IMPORT extern const cct CONVENTIONAL_VALUE_OF_OHM_90_2018;
ADD_IMPORT extern const cct CONVENTIONAL_VALUE_OF_VOLT_90_2018;
ADD_IMPORT extern const cct CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT_2018;
ADD_IMPORT extern const cct CONVENTIONAL_VALUE_OF_WATT_90_2018;
ADD_IMPORT extern const cct COPPER_X_UNIT_2018;
ADD_IMPORT extern const cct DEUTERON_ELECTRON_MAG_MOM_RATIO_2018;
ADD_IMPORT extern const cct DEUTERON_ELECTRON_MASS_RATIO_2018;
ADD_IMPORT extern const cct DEUTERON_G_FACTOR_2018;
ADD_IMPORT extern const cct DEUTERON_MAG_MOM_2018;
ADD_IMPORT extern const cct DEUTERON_MAG_MOM_TO_BOHR_MAGNETON_RATIO_2018;
ADD_IMPORT extern const cct DEUTERON_MAG_MOM_TO_NUCLEAR_MAGNETON_RATIO_2018;
ADD_IMPORT extern const cct DEUTERON_MASS_2018;
ADD_IMPORT extern const cct DEUTERON_MASS_ENERGY_EQUIVALENT_2018;
ADD_IMPORT extern const cct DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV_2018;