src/codata_constants_2018_capi.f90


type(capi_constant_type), protected, public, bind(C, name="CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT_2018") ::&
capi_61_2018 = capi_constant_type([ &
"c", "o", "n", "v", "e", "n", "t", "i", "o", "n", &
"a", "l", " ", "v", "a", "l", "u", "e", " ", "o", &
"f", " ", "J", "o", "s", "e", "p", "h", "s", "o", &
"n", " ", "c", "o", "n", "s", "t", "a", "n", "t", &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT_2018%value, &
CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT_2018%uncertainty, &
[ &
"H", "z", " ", "V", "^", "-", "1", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CONVENTIONAL_VALUE_OF_OHM_90_2018") ::&
capi_62_2018 = capi_constant_type([ &
"c", "o", "n", "v", "e", "n", "t", "i", "o", "n", &
"a", "l", " ", "v", "a", "l", "u", "e", " ", "o", &
"f", " ", "o", "h", "m", "-", "9", "0", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CONVENTIONAL_VALUE_OF_OHM_90_2018%value, &
CONVENTIONAL_VALUE_OF_OHM_90_2018%uncertainty, &
[ &
"o", "h", "m", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CONVENTIONAL_VALUE_OF_VOLT_90_2018") ::&
capi_63_2018 = capi_constant_type([ &
"c", "o", "n", "v", "e", "n", "t", "i", "o", "n", &
"a", "l", " ", "v", "a", "l", "u", "e", " ", "o", &
"f", " ", "v", "o", "l", "t", "-", "9", "0", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CONVENTIONAL_VALUE_OF_VOLT_90_2018%value, &
CONVENTIONAL_VALUE_OF_VOLT_90_2018%uncertainty, &
[ &
"V", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT_2018") ::&
capi_64_2018 = capi_constant_type([ &
"c", "o", "n", "v", "e", "n", "t", "i", "o", "n", &
"a", "l", " ", "v", "a", "l", "u", "e", " ", "o", &
"f", " ", "v", "o", "n", " ", "K", "l", "i", "t", &
"z", "i", "n", "g", " ", "c", "o", "n", "s", "t", &
"a", "n", "t", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT_2018%value, &
CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT_2018%uncertainty, &
[ &
"o", "h", "m", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CONVENTIONAL_VALUE_OF_WATT_90_2018") ::&
capi_65_2018 = capi_constant_type([ &
"c", "o", "n", "v", "e", "n", "t", "i", "o", "n", &
"a", "l", " ", "v", "a", "l", "u", "e", " ", "o", &
"f", " ", "w", "a", "t", "t", "-", "9", "0", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CONVENTIONAL_VALUE_OF_WATT_90_2018%value, &
CONVENTIONAL_VALUE_OF_WATT_90_2018%uncertainty, &
[ &
"W", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="COPPER_X_UNIT_2018") ::&
capi_66_2018 = capi_constant_type([ &
"C", "o", "p", "p", "e", "r", " ", "x", " ", "u", &
"n", "i", "t", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
COPPER_X_UNIT_2018%value, &
COPPER_X_UNIT_2018%uncertainty, &
[ &
"m", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_ELECTRON_MAG_MOM_RATIO_2018") ::&
capi_67_2018 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", "-", "e", &
"l", "e", "c", "t", "r", "o", "n", " ", "m", "a", &
"g", ".", " ", "m", "o", "m", ".", " ", "r", "a", &
"t", "i", "o", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_ELECTRON_MAG_MOM_RATIO_2018%value, &
DEUTERON_ELECTRON_MAG_MOM_RATIO_2018%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_ELECTRON_MASS_RATIO_2018") ::&
capi_68_2018 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", "-", "e", &
"l", "e", "c", "t", "r", "o", "n", " ", "m", "a", &
"s", "s", " ", "r", "a", "t", "i", "o", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_ELECTRON_MASS_RATIO_2018%value, &
DEUTERON_ELECTRON_MASS_RATIO_2018%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_G_FACTOR_2018") ::&
capi_69_2018 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "g", &
" ", "f", "a", "c", "t", "o", "r", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_G_FACTOR_2018%value, &
DEUTERON_G_FACTOR_2018%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_MAG_MOM_2018") ::&
capi_70_2018 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "m", &
"a", "g", ".", " ", "m", "o", "m", ".", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_MAG_MOM_2018%value, &
DEUTERON_MAG_MOM_2018%uncertainty, &
[ &
"J", " ", "T", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_MAG_MOM_TO_BOHR_MAGNETON_RATIO_2018") ::&
capi_71_2018 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "m", &
"a", "g", ".", " ", "m", "o", "m", ".", " ", "t", &
"o", " ", "B", "o", "h", "r", " ", "m", "a", "g", &
"n", "e", "t", "o", "n", " ", "r", "a", "t", "i", &
"o", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_MAG_MOM_TO_BOHR_MAGNETON_RATIO_2018%value, &
DEUTERON_MAG_MOM_TO_BOHR_MAGNETON_RATIO_2018%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_MAG_MOM_TO_NUCLEAR_MAGNETON_RATIO_2018") ::&
capi_72_2018 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "m", &
"a", "g", ".", " ", "m", "o", "m", ".", " ", "t", &
"o", " ", "n", "u", "c", "l", "e", "a", "r", " ", &
"m", "a", "g", "n", "e", "t", "o", "n", " ", "r", &
"a", "t", "i", "o", c_null_char, " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_MAG_MOM_TO_NUCLEAR_MAGNETON_RATIO_2018%value, &
DEUTERON_MAG_MOM_TO_NUCLEAR_MAGNETON_RATIO_2018%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_MASS_2018") ::&
capi_73_2018 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "m", &
"a", "s", "s", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_MASS_2018%value, &
DEUTERON_MASS_2018%uncertainty, &
[ &
"k", "g", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_MASS_ENERGY_EQUIVALENT_2018") ::&
capi_74_2018 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "m", &
"a", "s", "s", " ", "e", "n", "e", "r", "g", "y", &
" ", "e", "q", "u", "i", "v", "a", "l", "e", "n", &
"t", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_MASS_ENERGY_EQUIVALENT_2018%value, &
DEUTERON_MASS_ENERGY_EQUIVALENT_2018%uncertainty, &
[ &
"J", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV_2018") ::&
capi_75_2018 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "m", &
"a", "s", "s", " ", "e", "n", "e", "r", "g", "y", &
" ", "e", "q", "u", "i", "v", "a", "l", "e", "n", &
"t", " ", "i", "n", " ", "M", "e", "V", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV_2018%value, &
DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV_2018%uncertainty, &
[ &
"M", "e", "V", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])
